--- a/ansible-ipi-install/group_vars/all.yml
+++ b/ansible-ipi-install/group_vars/all.yml
@@ -34,7 +34,7 @@ rebuild_provisioner: false
 worker_count: 1
 alias:
 #lab specific vars, leave default
-  lab_url: "http://quads.alias.bos.scalelab.redhat.com"
+  lab_url: "http://quads11.alias.bos.scalelab.redhat.com"
 scale:
 # lab specific vars, leave default
   lab_url: "http://quads.rdu2.scalelab.redhat.com"
