--- a/ansible-ipi-install/roles/bootstrap/tasks/25_copykeys.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/25_copykeys.yml
@@ -2,7 +2,7 @@
 ---
 - name: copy jump host key
   shell: |
-    echo '{{ ansible_ssh_pass }}' | sshpass ssh-copy-id  -o 'StrictHostKeyChecking no' -f {{ ssh_user }}@{{ hostname }}
+    echo '{{ ansible_ssh_pass }}' | sshpass ssh-copy-id -i {{ ansible_ssh_key }} -o 'StrictHostKeyChecking no' -f {{ ssh_user }}@{{ hostname }}
   register: ssh_result
   changed_when: false
   ignore_errors: true
@@ -10,6 +10,6 @@
 - name: remove key and add again
   shell: |
     ssh-keygen -R {{ hostname }}
-    echo '{{ ansible_ssh_pass }}' | sshpass ssh-copy-id  -o 'StrictHostKeyChecking no' -f {{ ssh_user }}@{{ hostname }}
+    echo '{{ ansible_ssh_pass }}' | sshpass ssh-copy-id -i {{ ansible_ssh_key }} -o 'StrictHostKeyChecking no' -f {{ ssh_user }}@{{ hostname }}
   changed_when: false
   when: ssh_result.stderr_lines|length > 0
