Allow playbook execution from remote host
Currently the playbook-jetski.yml and the roles are written such
that the playbook only works when run from localhost.

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/playbook-jetski.yml
+++ b/ansible-ipi-install/playbook-jetski.yml
@@ -1,6 +1,6 @@
 ---
 - name: IPI on Baremetal Installation Playbook -- Red Hat Shared Labs JetSki Edition
-  hosts: localhost
+  hosts: orchestration
   roles:
     - { role: bootstrap }
 
@@ -8,7 +8,7 @@
   roles:
     - { role: prepare-kni, ssh_path: /root/.ssh}
 
-- hosts: localhost
+- hosts: orchestration
   roles:
     - { role: add-provisioner }
 
