--- a/ansible-ipi-install/group_vars/all.yml
+++ b/ansible-ipi-install/group_vars/all.yml
@@ -9,7 +9,7 @@ ansible_ssh_key: "{{ ansible_user_dir }}/.ssh/id_rsa"
 # The version of the openshift-installer, undefined or empty results in the playbook failing with error message.
 # Values accepted: 'latest-4.3', 'latest-4.4', explicit version i.e. 4.3.0-0.nightly-2019-12-09-035405
 # For reference, https://openshift-release.svc.ci.openshift.org/
-version: "4.4.4"
+version: "latest"
 # Enter whether the build should use 'dev' (nightly builds) or 'ga' for Generally Available version of OpenShift
 # Empty value results in playbook failing with error message.
 build: "ga"
@@ -28,7 +28,12 @@ pullsecret: ''
 foreman_url: https://foreman.example.com/
 # The automation automatically rebuilds provisioner node to RHEL 8.1 if not already RHEL 8.1 (see foreman_url variable)
 # However you can also force a reprovsioning of the provisioner node for redeployment scenarios
-rebuild_provisioner: false
+rebuild_provisioner: true
+# Whether the installation of the OS on the provisioner should be done within its own container.
+# By setting this to false, ansible will install the necessary packages to do the installation on the current
+# environment. This is recommended if ansible is running within a container.
+# By setting this to true, ansible will install podman and install the necessary packages in a container.
+containerize_rebuild_provisioner: false
 # Number of workers desired, by default all hosts in your allocation except 1 provisioner and 3 masters are used workers
 # However that behaviour can be overrided by explicitly settign the desired number of workers here. For a masters only deploy,
 # set worker_count to 0
