--- a/ansible-ipi-install/roles/bootstrap/tasks/20_reprovision_nodes.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/20_reprovision_nodes.yml
@@ -55,7 +55,7 @@
     - name: setup hammercli if not in container
       chdir=/root/
       shell: |
-        hammer --fetch-ca-cert ${foreman_url}
+        hammer --fetch-ca-cert {{ foreman_url }}
         j2 /root/foreman.yml.j2 > /etc/hammer/cli.modules.d/foreman.yml
       when: not containerize_rebuild_provisioner
 
