--- a/ansible-ipi-install/roles/bootstrap/tasks/20_reprovision_nodes.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/20_reprovision_nodes.yml
@@ -53,7 +53,7 @@
       when: lab_name == "alias" and containerize_rebuild_provisioner
 
     - name: setup hammercli if not in container
-      chdir=/root/
+      chdir: "/root/"
       shell: |
         hammer --fetch-ca-cert {{ foreman_url }}
         j2 /root/foreman.yml.j2 > /etc/hammer/cli.modules.d/foreman.yml
