--- a/ansible-ipi-install/group_vars/all.yml
+++ b/ansible-ipi-install/group_vars/all.yml
@@ -26,11 +26,9 @@ pullsecret: ''
 # and have it be https://foreman.example.com for example. If you are having trouble figuring out this variable please look for the 
 # pastebins under the "Modifying the ansible-ipi-install/group_vars/all.yml file" section in README.md
 foreman_url: https://foreman.example.com/
-# Whether the installation of the OS on the provisioner should be done within its own container.
-# By setting this to false, ansible will install the necessary packages to do the installation on the current
-# environment. This is recommended if ansible is running within a container.
-# By setting this to true, ansible will install podman and install the necessary packages in a container.
-containerize_rebuild_provisioner: false
+# The automation automatically rebuilds provisioner node to RHEL 8.1 if not already RHEL 8.1 (see foreman_url variable)
+# However you can also force a reprovsioning of the provisioner node for redeployment scenarios
+rebuild_provisioner: false
 # Number of workers desired, by default all hosts in your allocation except 1 provisioner and 3 masters are used workers
 # However that behaviour can be overrided by explicitly settign the desired number of workers here. For a masters only deploy,
 # set worker_count to 0
