--- a/ansible-ipi-install/roles/bootstrap/tasks/20_reprovision_nodes.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/20_reprovision_nodes.yml
@@ -26,7 +26,9 @@
   set_fact:
     run_in_container: lookup('env', 'DISABLE_PODMAN') != 'true'
 - debug:
-    msg: "Environment var: {{ lookup('env', 'DISABLE_PODMAN') }}"
+    msg:
+      - "Environment var: {{ lookup('env', 'DISABLE_PODMAN') }}"
+      - "run_in_container var: {{ run_in_container }}"
 
 - name: Perform OS install if needed
   block:
