--- a/ansible-ipi-install/roles/bootstrap/tasks/20_reprovision_nodes.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/20_reprovision_nodes.yml
@@ -24,7 +24,7 @@
 
 - name: Determine if containers should be used
   set_fact:
-    run_in_container: lookup('env', 'DISABLE_PODMAN') != 'true'
+    run_in_container: {{ lookup('env', 'DISABLE_PODMAN') != 'true' }}
 - debug:
     msg:
       - "Environment var: {{ lookup('env', 'DISABLE_PODMAN') }}"
