--- a/ansible-ipi-install/roles/bootstrap/vars/main.yml
+++ b/ansible-ipi-install/roles/bootstrap/vars/main.yml
@@ -1,3 +1,4 @@
 badfish_pod_image: "quads/badfish"
-badfish_cmd: "podman run -it --rm {{ badfish_pod_image }} -u {{ lab_ipmi_user }} -p {{ lab_ipmi_password }} -i config/idrac_interfaces.yml -H mgmt-"
+badfish_cmd_container: "podman run -it --rm {{ badfish_pod_image }} -u {{ lab_ipmi_user }} -p {{ lab_ipmi_password }} -i config/idrac_interfaces.yml -H mgmt-"
+badfish_cmd: "/root/badfish/src/badfish/badfish.py -u {{ lab_ipmi_user }} -p {{ lab_ipmi_password }} -i /root/badfish/config/idrac_interfaces.yml -H mgmt-"
 
