--- a/ansible-ipi-install/roles/installer/tasks/60_deploy_ocp.yml
+++ b/ansible-ipi-install/roles/installer/tasks/60_deploy_ocp.yml
@@ -17,7 +17,7 @@
   block:
     - name: Run OpenShift Cluster install as async task
       shell: |
-        /usr/local/bin/openshift-baremetal-install --dir {{ dir }} --log-level debug create cluster
+        /usr/local/bin/openshift-baremetal-install --dir {{ dir }} --log-level debug create cluster > {{ dir }}/create-cluster.stdout 2> {{ dir }}/create-cluster.stderr
       async: 3600
       poll: 0
       ignore_errors: yes
@@ -31,7 +31,7 @@
 
     - name: Wait for Bootstrap Complete
       shell: |
-        /usr/local/bin/openshift-baremetal-install --dir {{ dir }} --log-level debug wait-for bootstrap-complete
+        /usr/local/bin/openshift-baremetal-install --dir {{ dir }} --log-level debug wait-for bootstrap-complete > {{ dir }}/bootstrap-complete.stdout 2> {{ dir }}/bootstrap-complete.stderr
       register: wait_for_bootstrap_result
       until: wait_for_bootstrap_result is succeeded
       retries: "{{ increase_bootstrap_timeout|int }}"
@@ -39,7 +39,7 @@
 
     - name: Wait for Install Complete
       shell: |
-        /usr/local/bin/openshift-baremetal-install --dir {{ dir }} --log-level debug wait-for install-complete
+        /usr/local/bin/openshift-baremetal-install --dir {{ dir }} --log-level debug wait-for install-complete > {{ dir }}/install-complete.stdout 2> {{ dir }}/install-complete.stderr
       register: wait_for_install_result
       until: wait_for_install_result is succeeded
       retries: "{{ increase_install_timeout|int }}"
