Use qualified image names for container images
This is a security best practice.

Fixes: #37

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/bootstrap/files/Dockerfile
+++ b/ansible-ipi-install/roles/bootstrap/files/Dockerfile
@@ -1,4 +1,4 @@
-FROM centos:centos7
+FROM docker.io/centos:centos7
 ARG foreman_url=https://foreman.example.com
 RUN yum install -y epel-release \
     https://yum.theforeman.org/releases/2.1/el7/x86_64/foreman-release.rpm \
