--- a/ansible-ipi-install/roles/shared-labs-prep/vars/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/vars/main.yml
@@ -13,4 +13,4 @@ yum_packages:
   - python3-requests
   - https://trunk.rdoproject.org/rhel8-master/deps/latest/Packages/python3-crypto-2.6.1-18.el8ost.x86_64.rpm
   - https://trunk.rdoproject.org/rhel8-master/deps/latest/Packages/python3-pyghmi-1.0.22-2.el8ost.noarch.rpm
-badfish_cmd: "./badfish.py -u {{ lab_ipmi_user }} -p {{ lab_ipmi_password }} -i config/idrac_interfaces.yml -H mgmt-"
+badfish_cmd: "./src/badfish/badfish.py -u {{ lab_ipmi_user }} -p {{ lab_ipmi_password }} -i config/idrac_interfaces.yml -H mgmt-"
