Wait until drac is responsive before setting boot order (#51)
This commit uses the newly added return codes in badfish to
figure out if the iDRAC is ready to accept commands to change
boot order, before attempting to do so. This should fix most of
ALIAS installation issues.

Fixes: #19

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -154,6 +154,20 @@
   tags:
     - clearjobs
 
+- name: Wait for iDrac to be responsive (check via --check-boot)
+  shell:
+    chdir: "{{ badfish_tempdir.path }}"
+    cmd: |
+      source {{ badfish_venv }}/bin/activate
+      {{ badfish_cmd }}{{ item }} --check-boot
+  with_items:
+    - "{{ master_fqdns }}"
+    - "{{ worker_fqdns }}"
+  register: wait_for_idrac
+  until: wait_for_idrac is succeeded
+  retries: 20
+  delay: 30
+
 - name: Set nodes to director boot order
   shell:
     chdir: "{{ badfish_tempdir.path }}"
