--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/10_redfish_queue.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/10_redfish_queue.yml
@@ -11,10 +11,6 @@
       retries: 3
       delay: 30
   rescue:
-    - name: Reset iDRAC - {{ item }}
-      shell:
-        chdir: "{{ badfish_tempdir.path }}"
-        cmd: |
-          source {{ badfish_venv }}/bin/activate
-          {{ badfish_cmd }}{{ item }} --racreset        
-            
+    - name: Rescue - Reset iDRAC - {{ item }}
+      shell: |
+        sshpass -p "{{ lab_ipmi_password }}" ssh -o StrictHostKeyChecking=no {{ lab_ipmi_user }}@mgmt-{{ item }} "racadm racreset"
