Consolidate bootorder tag
Right now we have two tags clearjobs and bootorder.
This commit does the following:
1. Replace the clearjobs tag with bootorder tag since
   that is also needed only when setting boot order.
2. Add the bootorder tag to power on master/worker nodes
   tasks as they need to be powered on only for badfish
   to work, so if not setting bootorder, we can skip them
3. Adds the bootorder tag to the task that does --check-boot
   since that task is also not needed when not setting boot
   order

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/shared-labs-prep/tasks/main.yml
@@ -125,6 +125,8 @@
   until: power_on_masters is succeeded
   retries: 3
   delay: 30
+  tags:
+    - bootorder
 
 - name: Power on worker nodes
   ipmi_power:
@@ -137,14 +139,15 @@
   until: power_on_workers is succeeded
   retries: 3
   delay: 30
-
+  tags:
+    - bootorder
 
 - include_tasks: 10_redfish_queue.yml
   with_items:
     - "{{ master_fqdns }}"
     - "{{ worker_fqdns }}"
   tags:  
-    - clearjobs
+    - bootorder
 
 - name: Wait for iDrac to be responsive (check via --check-boot)
   shell:
@@ -159,6 +162,8 @@
   until: wait_for_idrac is succeeded
   retries: 20
   delay: 30
+  tags:
+    - bootorder
 
 - name: Set nodes to director boot order
   shell:
@@ -175,8 +180,6 @@
   delay: 60
   tags:
     - bootorder
-
-#TODO: Add wait for node reboot
 
 - name: Set SELinux permissive
   selinux:
