new roles to scale up worker via JetSki

--- a/ansible-ipi-install/group_vars/all.yml
+++ b/ansible-ipi-install/group_vars/all.yml
@@ -33,6 +33,9 @@ rebuild_provisioner: false
 # However that behaviour can be overrided by explicitly settign the desired number of workers here. For a masters only deploy,
 # set worker_count to 0
 worker_count: 0
+# Required only when scaling up an existing cluster, provided lab allocation is sufficient to scale up to this count. 
+# If not mentioned for a scale up execution, it includes all node available in the inventory `ocpnondeployednodeinv.json`
+scale_worker_count: 0
 # set to true to deploy with jumbo frames
 jumbo_mtu: false
 alias:
