Fix issue with using custom inventory
e541aeda1522bc3ebd7b28a72e327bd1b1c56260 which added the mechanism
to make sure all nodes being used are part of the user's actual cloud
allocation broke the workflow of being able to use a custom inventory.
This commit fixes it.

Signed-off-by: Sai Sindhur Malleni <smalleni@redhat.com>

--- a/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
+++ b/ansible-ipi-install/roles/bootstrap/tasks/10_load_inv.yml
@@ -70,6 +70,17 @@
     content: "{{ ocpinv_content | to_nice_json }}"
   when: not st.stat.exists
 
+- name: Create final inventory used for deployment
+  block:
+    - name: read inv env file
+      slurp:
+        src: "{{ ocpinv_file }}"
+      register: finalinv
+
+    - name: set inventory fact
+      set_fact:
+        ocpinv_content: "{{ finalinv['content'] | b64decode | from_json }}"
+
 - name: set provisioning host and ocp cluster info
   block:
     - name: set provisioner hostname
