--- a/ansible-ipi-install/roles/scale-node-prep/tasks/main.yml
+++ b/ansible-ipi-install/roles/scale-node-prep/tasks/main.yml
@@ -41,25 +41,13 @@
   retries: 3
   delay: 30
 
-- name: Clear redfish job queues
-  shell:
-    chdir: "{{ badfish_tempdir.path }}"
-    cmd: |
-      source {{ badfish_venv }}/bin/activate
-      {{ badfish_cmd }}{{ item }} --clear-jobs --force
-  with_items:
-    - "{{ worker_fqdns }}"
-  tags:  
-    - bootorder
-  register: jobqueue_requests
-  async: 3600
-  poll: 0
 
 - include_role:
     name: shared-labs-prep
     tasks_from: 10_redfish_queue.yml
-  with_items: "{{ jobqueue_requests.results }}"
-  tags:  
+  with_items:
+    - "{{ worker_fqdns }}"
+  tags:
     - bootorder
 
 - name: Wait for iDrac to be responsive (check via --check-boot)
@@ -74,6 +62,8 @@
   until: wait_for_idrac is succeeded
   retries: 20
   delay: 30
+  tags:
+    - bootorder
 
 - name: Set nodes to director boot order
   shell:
@@ -83,17 +73,11 @@
       {{ badfish_cmd }}{{ item }} -t director
   with_items:
     - "{{ worker_fqdns }}"
-  register: boot_order_requests
+  register: boot_order
+  until: boot_order is succeeded
+  retries: 3
+  delay: 60
   tags:
-    - bootorder
-  async: 3600
-  poll: 0
-
-- include_role:
-    name: shared-labs-prep
-    tasks_from: 20_boot_order.yml
-  with_items: "{{ boot_order_requests.results }}"
-  tags:  
     - bootorder
 
 - name: Power off new worker nodes
