--- a/ansible-ipi-install/roles/scale-worker/tasks/30_scale_machinesets.yml
+++ b/ansible-ipi-install/roles/scale-worker/tasks/30_scale_machinesets.yml
@@ -12,9 +12,9 @@
   shell: |
     oc -n openshift-machine-api scale --replicas={{ scale_worker_count }} machineset {{ worker_machineset.stdout }}
 
-- name: wait for 1200 seconds before checking for Machinesets 
+- name: wait for 30 minutes before checking for Machinesets 
   wait_for:
-    timeout: 1200
+    timeout: 1800
 
 - name: Wait for machineset to be available
   environment:
